--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,25 @@
 plugins {
     id 'java'
-    id 'com.android.application' version "8.1.2" apply false
+    id "io.qameta.allure" version "2.9.6"
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 
-def junitVersion = "5.8.2",
+def allureVersion = "2.19.0",
+    junitVersion = "5.8.2",
     slf4jVersion = "1.7.32"
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
+    testImplementation 'com.github.romankh3:image-comparison:4.4.0'
     testImplementation(
+            "io.qameta.allure:allure-junit5:$allureVersion",
             "com.codeborne:selenide:5.25.0",
+            "io.qameta.allure:allure-selenide:$allureVersion",
             "io.appium:java-client:7.6.0",
             "org.aeonbits.owner:owner:1.0.12",
             "io.rest-assured:rest-assured:4.4.0",
@@ -23,4 +31,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+
+    testLogging {
+        lifecycle {
+            events "failed"
+            exceptionFormat "short"
+        }
+    }
 }
